hooks/testdata/config/hooks.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-configuration
webhooks:
  - name: baseline.mpod.kb.io
    admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: webhook-service
        namespace: system
        path: /mutate-baseline
    failurePolicy: Fail
    reinvocationPolicy: IfNeeded
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - UPDATE
        resources:
          - pods/ephemeralcontainers
    sideEffects: None
    namespaceSelector:
      matchExpressions:
        - key: pod-security.cybozu.com/policy
          operator: NotIn
          values:
            - "privileged"
            - "hostpath"
  - name: hostpath.mpod.kb.io
    admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: webhook-service
        namespace: system
        path: /mutate-hostpath
    failurePolicy: Fail
    reinvocationPolicy: IfNeeded
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - UPDATE
        resources:
          - pods/ephemeralcontainers
    sideEffects: None
    namespaceSelector:
      matchExpressions:
        - key: pod-security.cybozu.com/policy
          operator: In
          values:
            - "hostpath"
  - name: restricted.mpod.kb.io
    admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: webhook-service
        namespace: system
        path: /mutate-restricted
    failurePolicy: Fail
    reinvocationPolicy: IfNeeded
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - UPDATE
        resources:
          - pods/ephemeralcontainers
    sideEffects: None
    namespaceSelector:
      matchExpressions:
        - key: pod-security.cybozu.com/policy
          operator: In
          values:
            - "restricted"
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook-configuration
webhooks:
  - name: baseline.vpod.kb.io
    admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: webhook-service
        namespace: system
        path: /validate-baseline
    failurePolicy: Fail
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - UPDATE
        resources:
          - pods/ephemeralcontainers
    sideEffects: None
    namespaceSelector:
      matchExpressions:
        - key: pod-security.cybozu.com/policy
          operator: NotIn
          values:
            - "privileged"
            - "hostpath"
  - name: hostpath.vpod.kb.io
    admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: webhook-service
        namespace: system
        path: /validate-hostpath
    failurePolicy: Fail
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - UPDATE
        resources:
          - pods/ephemeralcontainers
    sideEffects: None
    namespaceSelector:
      matchExpressions:
        - key: pod-security.cybozu.com/policy
          operator: In
          values:
            - "hostpath"
  - name: restricted.vpod.kb.io
    admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: webhook-service
        namespace: system
        path: /validate-restricted
    failurePolicy: Fail
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - UPDATE
        resources:
          - pods/ephemeralcontainers
    sideEffects: None
    namespaceSelector:
      matchExpressions:
        - key: pod-security.cybozu.com/policy
          operator: In
          values:
            - "restricted"
