hooks/testdata/config/mutating.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-configuration-for-test
webhooks:
  - name: mutating.mpod.kb.io
    admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: webhook-service
        namespace: system
        path: /mutate-mutating
    failurePolicy: Fail
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    sideEffects: None
    namespaceSelector:
      matchExpressions:
        - key: pod-security.cybozu.com/policy
          operator: In
          values:
            - "mutating"
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook-configuration-for-test
webhooks:
  - name: mutating.vpod.kb.io
    admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: webhook-service
        namespace: system
        path: /validate-mutating
    failurePolicy: Fail
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    sideEffects: None
    namespaceSelector:
      matchExpressions:
        - key: pod-security.cybozu.com/policy
          operator: In
          values:
            - "mutating"
